--- a/public/index.html
+++ b/public/index.html
@@ -9,8 +9,7 @@
 
     <title>WorkSite</title
 
-    <meta name="description" content="Material Symbols are our newest icons consolidating over 2,500 glyphs in a single font file with a wide range of design variants.">
-
+    <meta name="description" content="Faith HVAC has air quality solutions that are the newest, most modern furnaces, boilers, air conditioners and hot water heaters to date.  Energy efficient HVAC products with a wide range of brand variants.">
     <meta property="og:site_name" content="Faith HVAC">    
     <meta property="og:url" content="https://faithheatingcooling.com/">
     <meta property="og:title" content="Heating and Cooling Products and Services - Faith HVAC">
@@ -31,6 +30,7 @@
 
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+      
 <!--
     <link rel="apple-touch-icon" href="https://www.gstatic.com/images/branding/product/1x/google_fonts_64dp.png">
 
@@ -49,7 +49,7 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
 
-<script defer>
+<script>
 {
   "@context": "https://schema.org",
   "@type": ["HVAC contractor", "Heating contractor", "Air conditioning contractor", "Air conditioning repair service", "Furnace repair service", "Handyman service"],
