--- a/public/index.html
+++ b/public/index.html
@@ -85,7 +85,7 @@
 
         <h1>LOGO</h1>
 
-        <span id="headerHeight">...</span>
+        <span id="headerHeight"></span>
 
       </div>
 		</header>
@@ -93,9 +93,9 @@
     <main>
       <div class="main-wrapper">
 
-        <span id="time-now">...</span>
+        <span id="time-now"></span>
 
-        <span id="mainHeight">...</span>
+        <span id="mainHeight"></span>
 
       </div>
 		</main>
@@ -103,7 +103,7 @@
 		<footer>
       <div class="footer-wrapper">
 
-        <span id="footerHeight">...</span>
+        <span id="footerHeight"></span>
 
       </div>
     </footer>
