--- a/public/index.html
+++ b/public/index.html
@@ -77,7 +77,8 @@
 	text-size-adjust:100%;
 }
 html,body{
-  font-family:"Roboto",monospace,sans-serif;
+  font-family:system-ui,"Roboto",monospace,sans-serif;
+
 </style>
     
 <link rel="stylesheet" href="style.css" as="style" />
@@ -95,7 +96,7 @@ html,body{
       </nav>
       <!-- Site H1 [name/logo] -->
       <h1>
-			  LOGO
+			  <i class="material-symbols-outlined">dynamic_form</i>
       </h1>
       
       <span id="headerHeight"></span>
