--- a/public/index.html
+++ b/public/index.html
@@ -96,10 +96,10 @@ html,body{
       </nav>
       <!-- Site H1 [name/logo] -->
       <h1>
-			  <i class="material-symbols-outlined">dynamic_form</i>
+			  Windy <i class="material-symbols-outlined">dynamic_form</i>
       </h1>
       
-      <span id="headerHeight"></span>
+      <!--<span id="headerHeight"></span>-->
       
     </div>
 	</header>
