--- a/public/index.html
+++ b/public/index.html
@@ -78,7 +78,8 @@
 }
 html,body{
   font-family:system-ui,"Roboto",monospace,sans-serif;
-
+}
+.header-wrapper{display:flex;align-items:center;}
 </style>
     
 <link rel="stylesheet" href="style.css" as="style" />
