--- a/public/index.html
+++ b/public/index.html
@@ -76,7 +76,7 @@
 	-moz-text-size-adjust: 100%;
 	text-size-adjust:100%;
 }
-html,body{
+html,body{overflow:hidden auto;
   font-family:system-ui,"Roboto",monospace,sans-serif;
 }
 .header-wrapper{display:flex;align-items:center;}
@@ -101,7 +101,9 @@ html,body{
       </h1>
       
       <!--<span id="headerHeight"></span>-->
-      
+      	  <nav>
+			  <i class="material-symbols-outlined">search</i>
+      </nav>
     </div>
 	</header>
   
