--- a/public/index.html
+++ b/public/index.html
@@ -97,7 +97,7 @@ html,body{overflow:hidden auto;
       </nav>
       <!-- Site H1 [name/logo] -->
       <h1>
-			  <i class="material-symbols-outlined">dynamic_form</i>
+			  <i class="material-symbols-outlined">dynamic_form</i>Faith
       </h1>
       
       <!--<span id="headerHeight"></span>-->
