--- a/public/index.html
+++ b/public/index.html
@@ -97,7 +97,7 @@ html,body{overflow:hidden auto;
       </nav>
       <!-- Site H1 [name/logo] -->
       <h1>
-			  <i class="material-symbols-outlined">fire</i>
+		    FaithHVAC
       </h1>
       
       <!--<span id="headerHeight"></span>-->
