--- a/public/index.html
+++ b/public/index.html
@@ -80,6 +80,7 @@ html,body{overflow:hidden auto;
   font-family:system-ui,"Roboto",monospace,sans-serif;
 }
 .header-wrapper{display:flex;align-items:center;}
+.span-hvac-h1{font-style:italic;font-weight:400;}
 </style>
     
 <link rel="stylesheet" href="style.css" as="style" />
@@ -97,7 +98,7 @@ html,body{overflow:hidden auto;
       </nav>
       <!-- Site H1 [name/logo] -->
       <h1>
-		    FaithHVAC
+		    Faith<span class="span-hvac-h1">HVAC</span>
       </h1>
       
       <!--<span id="headerHeight"></span>-->
