--- a/public/index.html
+++ b/public/index.html
@@ -80,7 +80,7 @@ html,body{overflow:hidden auto;
   font-family:system-ui,"Roboto",monospace,sans-serif;
 }
 .header-wrapper{display:flex;align-items:center;}
-.span-hvac-h1{font-style:italic;font-weight:400;}
+.span-hvac-h1{font-weight:400;}
 </style>
     
 <link rel="stylesheet" href="style.css" as="style" />
